[gd_scene load_steps=5 format=3 uid="uid://cjgycdhdkiits"]

[ext_resource type="PackedScene" uid="uid://c53x67oteexha" path="res://scenes/entity.tscn" id="1_3vnsp"]
[ext_resource type="Script" path="res://scripts/GDScripts/enemy.gd" id="2_1phvu"]
[ext_resource type="Script" path="res://scripts/GDScripts/hitbox.gd" id="3_v1tjv"]
[ext_resource type="PackedScene" uid="uid://bee23y5k5b0d4" path="res://scenes/components/health_component.tscn" id="4_d6toh"]

[node name="Enemy" instance=ExtResource("1_3vnsp")]
collision_layer = 2
collision_mask = 5
motion_mode = 1
script = ExtResource("2_1phvu")
POINTS = 1.0
PENALTY = -10.0
DAMAGE = 1.0

[node name="Hitbox" parent="." index="1"]
collision_layer = 2
collision_mask = 5
script = ExtResource("3_v1tjv")

[node name="HealthComponent" parent="." index="4" instance=ExtResource("4_d6toh")]

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
